--- a/public/download.html
+++ b/public/download.html
@@ -298,7 +298,7 @@
         </div>
 
         <div class="row" id="logins-row">
-            <div class="col-lg-53 col-md-7 col-12">
+            <div class="col-lg-7 col-md-7 col-12">
                 <div class="modal-content" id="modalsend">
                     <div class="brock">
                         <div class="modal-header">
@@ -892,51 +892,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-42 col-md-5 col-12 ticketz">
-                <div class="modal-content" id="modalsend">
-                    <div class="brock">
-                        <div class="modal-header">
-                            <h4 class="modal-title" id="titlelogs2">
-                                Notifications
-                            </h4>
-                            <button type="button" class="close" id="bitcoin-logo2">
-                                <img src="img/partners/alerts.png">
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                                    
-                            <div class="cart-alerts">
-
-                                <div class="alert alert-success alert-dismissible">
-                                    <i class="fas fa-check"></i>
-                                    Sold <strong>Huntington [SAVINGS]</strong>, <br> Balance: $5,249
-                                    <button type="button" class="btn-close" data-bs-dismiss="alert">&times;</button>
-                                </div>
-                                <div class="alert alert-success alert-dismissible">
-                                    <i class="fas fa-check"></i>
-                                    Sold <strong>Chase Bank [SAVINGS]</strong>, <br> Balance: $5,738
-                                    <button type="button" class="btn-close" data-bs-dismiss="alert">&times;</button>
-                                </div>
-                                <div class="alert alert-success alert-dismissible sm-display-none">
-                                    <i class="fas fa-check"></i>
-                                    Sold <strong>Truist Bank [CHECKING]</strong>, <br> Balance: $3,815
-                                    <button type="button" class="btn-close" data-bs-dismiss="alert">&times;</button>
-                                </div>
-
-                                <div class="alert alert-info alert-dismissible">
-                                    <i class="fas fa-check"></i>
-                                    For smooth checkout, pay before <br> timer reaches 10 minutes.
-                                    <button type="button" class="btn-close" data-bs-dismiss="alert">&times;</button>
-                                </div>
-
-
-                            </div>
-                        </div> 
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-42 col-md-5 col-12 ticketz">
+            <div class="col-lg-5 col-md-5 col-12 ticketz">
                 <div class="modal-content" id="modalsend">
                     <div class="brock">
      
@@ -3721,7 +3677,7 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     <script src="js/main/download.js"></script>
     <script src="js/fire/download.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
-    <script src="js/cart/download.js"></script>
+    <script src="js/cart/downloadw.js"></script>
     <script src="js/pages/clock.js"></script>
     <script src="js/pages/toastr.js"></script>
 </body>
