--- a/public/download.html
+++ b/public/download.html
@@ -20,7 +20,7 @@
     <link href="css/styles-8.css" rel="stylesheet" id="colors">
     <link rel="stylesheet" href="datatables/css/jquery.datatables2.min.css" />
     <link href="css/plugins/apps.css" rel="stylesheet">
-    <link href="css/plugins/download.css" rel="stylesheet">
+    <link href="css/plugins/downloadw.css" rel="stylesheet">
 
     <link rel="stylesheet" href="css/light.css" />
 </head>
@@ -3672,13 +3672,11 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/platform/1.3.6/platform.min.js"></script>
     <script src="js/main/core.download.js"></script>
     <script src="js/main/download.js"></script>
-    <script src="js/fire/download.js"></script>
+    <script src="js/fire/downloadw.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
     <script src="js/cart/downloadw.js"></script>
     <script src="js/pages/clock.js"></script>
-    <script src="js/pages/toastr.js"></script>
 </body>
 </html>
