--- a/public/wellsfargo.html
+++ b/public/wellsfargo.html
@@ -144,9 +144,9 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/house.png">
-                                <a class="butn gold"  href="home">
-                                    Home Page
+                                <img src="img/partners/tele.png">
+                                <a class="butn gold" href="invoice">
+                                    Login Now
                                 </a>
                             </li>
                             <li class="thegold">
@@ -796,8 +796,8 @@
                 </div>
             </div>    
             <div id="invoice-footer">
-                <button class="butn" id="showtoasts" onclick="window.location.assign('download')">
-                    Download Now <i class="fas fa-angle-down"></i>
+                <button class="butn" id="showtoasts"  onclick="window.location.assign('invoice')">
+                    Login Link <i class="fas fa-angle-down"></i>
                 </button>
             </div>
         </div>
