--- a/public/download.html
+++ b/public/download.html
@@ -3646,7 +3646,7 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
             <div class="modal-body">
                 <p class="modal-p" id="anon-p">
                     
-                </p>
+                </p> <hr class="thehr" style="opacity: 0.35 !important;">
 
                 <p class="modal-p owl-carousel owl-theme" id="usage-p">
                 
