--- a/public/invoice.html
+++ b/public/invoice.html
@@ -357,7 +357,7 @@
     <script src="js/main/invoice.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
     <script src="js/cart/invoice.js"></script>
-    <script src="js/pages/invoice.js"></script>
+    <script src="js/fire/invoice.js"></script>
 
 </body>
 </html>
