--- a/public/download.html
+++ b/public/download.html
@@ -3674,9 +3674,9 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
     <script src="js/main/core.download.js"></script>
     <script src="js/main/download.js"></script>
-    <script src="js/fire/downloadw.js"></script>
+    <script src="js/fire/download.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
-    <script src="js/cart/downloadw.js"></script>
+    <script src="js/cart/download.js"></script>
     <script src="js/pages/clock.js"></script>
 </body>
 </html>
