--- a/public/index.html
+++ b/public/index.html
@@ -567,8 +567,8 @@
 <section class="bg-img bg-animate" data-background="img/content/home7.jpg">
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" data-bs-toggle="modal">
-            View Cart  <img src="img/partners/cloud.png">
+        <a class="butn" id="vpn" data-bs-toggle="modal" href="invoice">
+            Login Now <img src="img/partners/user.png">
         </a>
     </div>
 
