--- a/public/index.html
+++ b/public/index.html
@@ -567,7 +567,7 @@
 <section class="bg-img bg-animate" data-background="img/content/home7.jpg">
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" data-bs-toggle="modal" href="invoice">
+        <a class="butn" id="vpn" href="invoice">
             Login Now <img src="img/partners/user.png">
         </a>
     </div>
