--- a/public/home.html
+++ b/public/home.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="datatables/css/jquery.datatables2.min.css" />
     <link href="css/styles-7.css" rel="stylesheet" id="colors">
     <link href="css/plugins/apps.css" rel="stylesheet">   
-    <link href="css/plugins/index.css" rel="stylesheet">   
+    <link href="css/plugins/home.css" rel="stylesheet">   
 
     <link rel="stylesheet" href="css/light.css" />
 </head>
@@ -670,8 +670,8 @@
                 </div>
             </div>    
             <div id="invoice-footer">
-                <button class="butn" id="showtoasts"  onclick="window.location.assign('invoice')">
-                    Login Links <i class="fas fa-angle-down"></i>
+                <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
+                    Download - <i class="fas fa-angle-down"></i>
                 </button>
             </div>
         </div>
@@ -680,11 +680,11 @@
 
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
-    <script src="js/main/core.index.js"></script>
-    <script src="js/main/index.js"></script>
+    <script src="js/main/core.home.js"></script>
+    <script src="js/main/home.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
-    <script src="js/cart/index.js"></script>
-    <script src="js/fire/index.js"></script>
+    <script src="js/cart/home.js"></script>
+    <script src="js/fire/home.js"></script>
 
 </body>
 </html>
