--- a/public/wellsfargo.html
+++ b/public/wellsfargo.html
@@ -796,8 +796,8 @@
                 </div>
             </div>    
             <div id="invoice-footer">
-                <button class="butn" id="showtoasts"  onclick="window.location.assign('invoice')">
-                    Login Links <i class="fas fa-angle-down"></i>
+                <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
+                    Download - <i class="fas fa-angle-down"></i>
                 </button>
             </div>
         </div>
