--- a/public/download.html
+++ b/public/download.html
@@ -261,7 +261,7 @@
 
                     <div id="invoice-footer">
                         <button class="butn" id="showtoasts"  data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            Download Now <i class="fas fa-angle-down"></i>
+                            Download - <i class="fas fa-angle-down"></i>
                         </button>
                     </div>
                     
