--- a/public/citi.html
+++ b/public/citi.html
@@ -144,9 +144,9 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/tele.png">
-                                <a class="butn gold" href="invoice">
-                                    Login Now
+                                <img src="img/partners/house.png">
+                                <a class="butn gold" href="home">
+                                    Home Page
                                 </a>
                             </li>
                             <li class="thegold">
@@ -922,7 +922,7 @@
             </div>    
             <div id="invoice-footer">
                 <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
-                    Download - <i class="fas fa-angle-down"></i>
+                    Download Log <i class="fas fa-angle-down"></i>
                 </button>
             </div>
         </div>
