--- a/public/download.html
+++ b/public/download.html
@@ -148,9 +148,9 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/tele.png">
-                                <a class="butn gold" href="invoice">
-                                    Login Now
+                                <img src="img/partners/house.png">
+                                <a class="butn gold" href="home">
+                                    Home Page
                                 </a>
                             </li>
                             <li class="thegold">
@@ -261,7 +261,7 @@
 
                     <div id="invoice-footer">
                         <button class="butn" id="showtoasts"  data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            Download - <i class="fas fa-angle-down"></i>
+                            Download Log <i class="fas fa-angle-down"></i>
                         </button>
                     </div>
                     
