--- a/public/index.html
+++ b/public/index.html
@@ -304,7 +304,7 @@
                 </div>
             </div>
             <div class="modal-body" id="first-modal" style="border-top: none !important;">
-                <a class="butn" id="settings" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <a class="butn" id="settings" data-bs-toggle="modal" data-bs-target="#profileModal">
                     View Cart <img src="img/partners/user.png">
                 </a>
             </div>
