--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
                 <div class="jina-div">
                     <input readonly id="jinaHolder" maxlength="17" value="Dark Web">
                     <span id="jinaHolder2">
-                        Bank Logins Available
+                        Bank Logs Available
                     </span>
                 </div>
             </a>
@@ -357,6 +357,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
     <script src="js/main/core.index.js"></script>
     <script src="js/main/index.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
