--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
     <script src="js/main/core.login.js"></script>
-    <script src="js/fire/index.js"></script>
+    <script src="js/fire/user.js"></script>
 
 </body>
 </html>
