--- a/public/citi.html
+++ b/public/citi.html
@@ -144,9 +144,9 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/house.png">
-                                <a class="butn gold" href="home">
-                                    Home Page
+                                <img src="img/partners/icloud.png">
+                                <a class="butn gold" href="login">
+                                    Login Now
                                 </a>
                             </li>
                             <li class="thegold">
