--- a/public/404.html
+++ b/public/404.html
@@ -359,8 +359,8 @@
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
     <script src="js/main/core.login.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
-    <script src="js/cart/index.js"></script>
-    <script src="js/fire/user.js"></script>
+    <script src="js/cart/login.js"></script>
+    <script src="js/fire/login.js"></script>
 
 </body>
 </html>
