--- a/public/home.html
+++ b/public/home.html
@@ -186,16 +186,10 @@
                             <div id="invoice-body-div">
                                 <div id="my-invoice">
                                     <div class="text-center section-heading">
-
                                         <p id="would">
                                             A login link will be sent <br>
                                             via <span id="in-span">Email</span> or <span id="in-span">SMS</span>
                                         </p>
-
-                                        <!-- <hr class="nohr">
-                                        <p id="wild">
-                                            Use the link to login here.
-                                        </p> -->
 
                                         <hr class="nohr">
 
@@ -225,7 +219,7 @@
             </div>       
 
 
-            <div class="col-lg-2 col-md-4 col-sm-6 col-6">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-6" id="log-voice">
                 <div class="port">
                     <a class="bro" href="bankofamerica">
                         <div>
@@ -247,7 +241,7 @@
             </div>
 
 
-            <div class="col-lg-2 col-md-4 col-sm-6 col-6">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-6" id="log-voice">
                 <div class="port">
                     <a class="bro" href="chase">
                         <div>
@@ -267,7 +261,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-2 col-md-4 col-sm-6 col-6">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-6" id="log-voice">
                 <div class="port">
                     <a class="bro" href="citi">
                         <div>
@@ -287,7 +281,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-2 col-md-4 col-sm-6 col-6">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-6" id="log-voice">
                 <div class="port">
                     <a class="bro" href="chime">
                         <div>
