--- a/public/download.html
+++ b/public/download.html
@@ -22,6 +22,8 @@
     <link href="css/plugins/apps.css" rel="stylesheet">
     <link href="css/plugins/downloadw.css" rel="stylesheet">
 
+    <link href="css/plugins/email.css" rel="stylesheet">
+
     <link rel="stylesheet" href="css/light.css" />
 </head>
 <body id="thebodyz" style="background: #121d33;">
@@ -177,7 +179,7 @@
         <div id="particles-js"></div>
     </div>
     <div class="container-fluid" id="logs-download">
-        <div class="row no-margin-bottom therow xenon4">
+        <div class="row no-margin-bottom therow">
 
             <div class="col-lg-41 col-md-45 col-12 center-col" id="invoice-col">
                 <blink id="disb">Pending</blink>
@@ -223,7 +225,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-6 col-md-75 col-12 center-col" id="invoice-col-table">
+            <div class="col-lg-7 col-md-75 col-12 center-col" id="invoice-col-table">
                 <div class="modal-content" id="invoice-table">
                     <div class="modal-header" style="padding-top: 15px !important; padding-bottom: 15px !important;">
                         <h4 class="modal-title" id="titlelogs2">
@@ -268,30 +270,88 @@
                 </div>
             </div>
 
-
-            <div class="col-lg-4 col-6 center-col lg-display-none" id="flex-one">
-                <div class="col-lg-9 col-12 center-col modal-body no-bord">
-                    <canvas id="chart3"></canvas>
-                </div> 
-
-                <div class="col-lg-9 col-12 center-col modal-body no-bord">
-                    <canvas id="chart4"></canvas>
-                </div> 
-            </div>
-
-
         </div>
     </div>
 </section>
 
 
+<!-- start projet ection -->
+<section class="bg-img bg-animate margin-0-padding-0" data-background="img/content/home7.jpg" id="logsection2">
+    <div class="container-fluid infinite-floating">
+
+        <div id="particles-xs"></div>
+
+
+        <div class="section-heading">
+            <h4 id="titlelogs3"></h4>
+        </div>
+
+        <div class="row xenon4" style="margin: 0 -10px !important;">
+
+            <div class="col-lg-4 col-6 center-col" id="flex-one">
+                <div class="col-lg-9 col-12 center-col modal-body no-bord">
+                    <canvas id="chart3"></canvas>
+                </div> 
+
+                <div class="col-lg-10 col-12 center-col modal-body no-bord lg-display-none">
+                    <canvas id="chart4"></canvas>
+                </div> 
+            </div>
+
+            <div class="col-lg-5 col-md-7 col-12 center-col" id="invoice-div">
+                <div class="section-heading">
+                    <h4 id="titlelogs3"></h4>
+                </div>
+                
+                <div class="modal-content" id="modalsend">
+                    <div class="brock">
+    
+                        <div class="modal-body" id="invoice-body">
+                            <div id="invoice-body-div">
+                                <div id="my-invoice">
+                                    <div class="text-center section-heading">
+                                        <p id="would">
+                                            A login link will be sent <br>
+                                            via <span id="in-span">Email</span> or <span id="in-span">SMS</span>
+                                        </p>
+
+                                        <hr class="nohr">
+
+                                        <form  id="the-form" onsubmit="signUpFunction()">
+                                            <div class="form-group col-md-12" id="form">
+                                                <div id="the-life">
+                                                    <img id="the-flag7" />
+                                                    <input type="text" class="form-control" id="inputLife" autofocus
+                                                     placeholder="Enter Email / Phone" required>
+                                                </div> <div id="recaptcha-container"></div>
+                                            </div> <hr class="thehr" id="hr">
+                                            <li class="next">
+                                                <a class="butn modal-btn" id="email-phone"> 
+                                                    Login Now <img src="img/partners/user.png">
+                                                </a>
+                                            </li>
+                                        </form>
+
+                                        <hr class="nohr" style="display: none !important;">
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>    
+                    </div>
+                </div>
+            </div>       
+
+        </div>
+    </div>
+
+
+</section>
+
 
 <section id="sales" class="bg-img bg-animate" data-background="img/content/home7.jpg">
 
     <div class="container-fluid thecont">
-
-        <div id="particles-xs"></div>
-
 
         <div class="section-heading">
             <h4 id="titlelogs3"></h4>
