--- a/public/download.html
+++ b/public/download.html
@@ -302,12 +302,12 @@
                 <div class="section-heading">
                     <h4 id="titlelogs3"></h4>
                 </div>
-                
+
                 <div class="modal-content" id="modalsend">
                     <div class="brock">
     
                         <div class="modal-body" id="invoice-body">
-                            <div id="invoice-body-div">
+                            <div id="voice-body-div">
                                 <div id="my-invoice">
                                     <div class="text-center section-heading">
                                         <p id="would">
