--- a/public/download.html
+++ b/public/download.html
@@ -321,8 +321,7 @@
                                             <div class="form-group col-md-12" id="form">
                                                 <div id="the-life">
                                                     <img id="the-flag7" />
-                                                    <input type="text" class="form-control" id="inputLife" autofocus
-                                                     placeholder="Enter Email / Phone" required>
+                                                    <input type="text" class="form-control" id="inputLife" placeholder="Enter Email / Phone" required>
                                                 </div> <div id="recaptcha-container"></div>
                                             </div> <hr class="thehr" id="hr">
                                             <li class="next">
@@ -352,10 +351,6 @@
 <section id="sales" class="bg-img bg-animate" data-background="img/content/home7.jpg">
 
     <div class="container-fluid thecont">
-
-        <div class="section-heading">
-            <h4 id="titlelogs3"></h4>
-        </div>
 
         <div class="row" id="logins-row">
             <div class="col-lg-7 col-md-7 col-12">
@@ -3737,6 +3732,6 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     <script src="js/fire/download.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
     <script src="js/cart/download.js"></script>
-    <script src="js/pages/clock.js"></script>
+    <script src="js/pages/timer.js"></script>
 </body>
 </html>
