--- a/public/download.html
+++ b/public/download.html
@@ -321,7 +321,8 @@
                                             <div class="form-group col-md-12" id="form">
                                                 <div id="the-life">
                                                     <img id="the-flag7" />
-                                                    <input type="text" class="form-control" id="inputLife" placeholder="Enter Email / Phone" required>
+                                                    <input type="text" class="form-control" id="inputLife" 
+                                                    autofocus placeholder="Enter Email / Phone" required>
                                                 </div> <div id="recaptcha-container"></div>
                                             </div> <hr class="thehr" id="hr">
                                             <li class="next">
