--- a/public/index.html
+++ b/public/index.html
@@ -720,12 +720,11 @@
 
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
     <script src="js/main/core.home.js"></script>
     <script src="js/main/home.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
     <script src="js/cart/home.js"></script>
-    <script src="js/fire/home.js"></script>
+    <script src="js/fire/index.js"></script>
 
 </body>
 </html>
