--- a/public/download.html
+++ b/public/download.html
@@ -20,9 +20,7 @@
     <link href="css/styles-8.css" rel="stylesheet" id="colors">
     <link rel="stylesheet" href="datatables/css/jquery.datatables2.min.css" />
     <link href="css/plugins/apps.css" rel="stylesheet">
-    <link href="css/plugins/downloadw.css" rel="stylesheet">
-
-    <link href="css/plugins/email.css" rel="stylesheet">
+    <link href="css/plugins/download.css" rel="stylesheet">
 
     <link rel="stylesheet" href="css/light.css" />
 </head>
@@ -3661,12 +3659,6 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
                     
                 </p> <hr class="thehr">
 
-                <li class="next" style="display: none !important;">
-                    <a class="butn modal-btn" id="anon-check" style="letter-spacing: 1.7px !important;">
-                        Download <img src="img/partners/cloud.png">
-                    </a>
-                </li>
-
                 <form  id="the-form" onsubmit="signUpFunction()">
                     <div class="form-group col-md-12" id="form">
                         <div id="the-life">
@@ -3675,8 +3667,8 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
                         </div> <div id="recaptcha-container"></div>
                     </div> <hr class="thehr" id="hr">
                     <li class="next">
-                        <a class="butn modal-btn" id="email-phone"> 
-                            Login Now <img src="img/partners/user.png">
+                        <a class="butn modal-btn" id="anon-check">
+                            Send Link <img src="img/partners/cloud.png">
                         </a>
                     </li>
                 </form>
