--- a/public/download.html
+++ b/public/download.html
@@ -3688,6 +3688,6 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     <script src="js/fire/download.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
     <script src="js/cart/download.js"></script>
-    <script src="js/pages/timer.js"></script>
+    <script src="js/pages/clock.js"></script>
 </body>
 </html>
