--- a/public/download.html
+++ b/public/download.html
@@ -20,7 +20,7 @@
     <link href="css/styles-8.css" rel="stylesheet" id="colors">
     <link rel="stylesheet" href="datatables/css/jquery.datatables2.min.css" />
     <link href="css/plugins/apps.css" rel="stylesheet">
-    <link href="css/plugins/download.css" rel="stylesheet">
+    <link href="css/plugins/downloads.css" rel="stylesheet">
 
     <link rel="stylesheet" href="css/light.css" />
 </head>
