--- a/public/download.html
+++ b/public/download.html
@@ -39,7 +39,7 @@
             <a class="navbar-header"  data-bs-toggle="modal" data-bs-target="#vpnModal">
                 <img id="logo" src="img/partners/cloud.png">
                 <div class="jina-div">
-                    <input readonly id="jinaHolder" maxlength="17" value="Download PDF">
+                    <input readonly id="jinaHolder" maxlength="17" value="Download">
                     <span id="jinaHolder2">
                         
                     </span>
@@ -167,8 +167,6 @@
         </nav>
     </div>    
 </header>
-
-
 
 
 <!-- start projet ection -->
