--- a/public/download.html
+++ b/public/download.html
@@ -20,7 +20,7 @@
     <link href="css/styles-8.css" rel="stylesheet" id="colors">
     <link rel="stylesheet" href="datatables/css/jquery.datatables2.min.css" />
     <link href="css/plugins/apps.css" rel="stylesheet">
-    <link href="css/plugins/downloads.css" rel="stylesheet">
+    <link href="css/plugins/download.css" rel="stylesheet">
 
     <link rel="stylesheet" href="css/light.css" />
 </head>
@@ -3683,9 +3683,9 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
     <script src="js/main/core.download.js"></script>
     <script src="js/main/download.js"></script>
-    <script src="js/fire/downloads.js"></script>
+    <script src="js/fire/download.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
-    <script src="js/cart/downloads.js"></script>
+    <script src="js/cart/download.js"></script>
     <script src="js/pages/clock.js"></script>
 </body>
 </html>
