--- a/public/download.html
+++ b/public/download.html
@@ -3624,7 +3624,7 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
                     <p></p>
                  </div> 
                 <div class="modal-footer">
-                    <button class="butn money" id="monez">
+                    <button class="butn money" id="monez" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         
                     </button>
                 </div>
