--- a/public/chime.html
+++ b/public/chime.html
@@ -145,9 +145,9 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/icloud.png">
-                                <a class="butn gold" href="login">
-                                    Login Now
+                                <img src="img/partners/house.png">
+                                <a class="butn gold" href="index">
+                                    Home Page
                                 </a>
                             </li>
                             <li class="thegold">
