--- a/public/index.html
+++ b/public/index.html
@@ -147,9 +147,9 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/icloud.png">
-                                <a class="butn gold" href="login">
-                                    Login Now
+                                <img src="img/partners/house.png">
+                                <a class="butn gold" href="index">
+                                    Home Page
                                 </a>
                             </li>
                             <li class="thegold">
@@ -605,7 +605,6 @@
 
 
 <section class="bg-img bg-animate" data-background="img/content/home7.jpg">
-
     <div class="vpn-section">
         <a class="butn" id="vpn" href="chime">
             Bank Logs <img src="img/partners/table.png">
