--- a/public/download.html
+++ b/public/download.html
@@ -171,9 +171,7 @@
 
 <!-- start projet ection -->
 <section class="bg-img bg-animate" data-background="img/content/home7.jpg" id="logsection">
-    <div class="opacity-full-dark bg-extra-dark-gray">
-        <div id="particles-js"></div>
-    </div>
+    <div class="opacity-full-dark bg-extra-dark-gray"></div>
     <div class="container-fluid" id="logs-download">
         <div class="row no-margin-bottom therow">
 
@@ -273,7 +271,6 @@
 
 <!-- start projet ection -->
 <section class="bg-img bg-animate margin-0-padding-0" data-background="img/content/home7.jpg" id="logsection2">
-    <div id="particles-xs"></div>
     <div class="container-fluid infinite-floating">
         <div class="section-heading">
             <h4 id="titlelogs3"></h4>
@@ -3450,9 +3447,7 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
 <!-- start contact info section -->
 <section class="parallax" data-background="img/content/home7.jpg" style="padding: 0;" data-bs-toggle="modal" data-bs-target="#exampleModal">
 
-    <div class="opacity-full-dark bg-extra-dark-gray">
-        <div id="particles-vs"></div> 
-    </div>
+    <div class="opacity-full-dark bg-extra-dark-gray"></div>
 
     <div class="section-heading" style="margin: 3vh auto -1vh !important">
         <h4></h4>
