--- a/public/download.html
+++ b/public/download.html
@@ -3445,8 +3445,7 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
 
 
 <!-- start contact info section -->
-<section class="parallax" data-background="img/content/home7.jpg" style="padding: 0;" data-bs-toggle="modal" data-bs-target="#exampleModal">
-
+<section class="parallax" data-background="img/content/home7.jpg">
     <div class="opacity-full-dark bg-extra-dark-gray"></div>
 
     <div class="section-heading" style="margin: 3vh auto -1vh !important">
@@ -3670,7 +3669,6 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
         </div>
     </div>   
 </div>
-
 
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
