--- a/public/download.html
+++ b/public/download.html
@@ -2014,6 +2014,289 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
 
 
 
+<!-- start contact info section -->
+<section id="cd-time" class="parallax cd-container achtransfer" data-background="img/content/bg.jpg" 
+data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
+    <div class="opacity-full-dark bg-extra-dark-gray"></div>
+
+    <div class="section-heading">
+        <h4 id="titlelogs3" >
+            Cashout Method
+        </h4>
+    </div>
+
+
+    <div class="infinite-floating therow owl-carousel owl-theme" id="ach-carousel">
+
+
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 1</h4>
+                <img src="img/ach/1.png" alt="" />
+                <p>
+                    Login to the Bank Drop from client / white head .
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 2</h4>
+                <img src="img/ach/2.png" alt="" />
+                <p>
+                    Click on <b>Transfer</b>
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 3</h4>
+                <img src="img/ach/3.png" alt=""/>
+                <p>
+                    You will see <b>External Accounts</b> there, Click on <b>Add External account</b>
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 4</h4>
+                <img src="img/ach/4.png" alt="" />
+                <p>
+                    Since you are now adding a new External account (log), click on <b>Add a new external account</b>
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 5</h4>
+                <img src="img/ach/5.png" alt="" />
+                <p>
+                    Click on <b>Add account Manually</b>. Adding log manually (micro deposit way) is the best since it won't kill it
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 6</h4>
+                <img src="img/ach/6.png"  alt="" />
+                <p>
+                    You will be asked for only Account Number and Routing Number of the external bank (hacked log)
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 7</h4>
+                <img src="img/ach/7.png" alt="" />
+                <p>
+                    After inputting the Log account info, click on <b>Next</b>
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 8</h4>
+                <img src="img/ach/8.png" alt="" />
+                <p> 
+                    Click on <b>Send Trial Deposits</b>
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 9</h4>
+                <img src="img/ach/9.png" alt="" />
+                <p> 
+                    Two trial deposits will be sent to the hacked log in 1-2 business days.
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 10</h4>
+                <img src="img/ach/10.png" alt="" />
+                <p> 
+                    Now wait 1-2 business days for the two trial deposits to be shown in the transaction history of the hacked log, 
+                    the amounts are always less than $1.00
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 11</h4>
+                <img src="img/ach/11.png" alt="" />
+                <p> 
+                    After the 2 days, log in the back of the bank drop, click on Transfer.
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 12</h4>
+                <img src="img/ach/12.png" alt="" />
+                <p> 
+                    Now on the external transfer side, you will see the hacked log you recently added, click on <b>Verify Account</b>
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 13</h4>
+                <img src="img/ach/13.png" alt="" />
+                <p> 
+                    They ask for the trial deposit sent to the log for it to be verified, 
+                    to make sure that you have access to the account. 
+                    Check <b>Step no 10</b> above.
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 14</h4>
+                <img src="img/ach/14.png" alt="" />
+                <p> 
+                    External account(hacked log) has been added, its now time to make the transfer!!
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 15</h4>
+                <img src="img/ach/15.png" alt="" />
+                <p>
+                    Time to schedule the transfer. <br>
+                    Transfer FROM - the hacked log you just added <br>
+                    Transfer TO - Choose any account inside the bank drop
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 16</h4>
+                <img src="img/ach/16.png" alt="" />
+                <p>
+                    Transfer has been done Successfully !!! 
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 17</h4>
+                <img src="img/ach/19.png" alt="" />
+                <p>
+                    Once done well, the money will enter within 1-2 business days. 
+                </p>
+            </div>
+        </div>
+        
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 18</h4>
+                <img src="img/partners/tutorial.png" class="tutorial-img">
+                <p>
+                    Now the ACH method above is called <b>ACH CREDIT</b> and it's mostly used to send money to banks, <br>
+                    However if you want to run the ACH into cards like Moneylion and other prepaid cards then use <b>ACH DEBIT</b> <br>
+                    <b>Below is a summarized process to run ach into prepaid cards</b>
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Part 2, Step 1</h4>
+                <img src="img/partners/tutorial.png" class="tutorial-img">
+                <p> 
+                    With the normal ACH (as I did above), all job is done (inside the BANK DROP), <br>
+                    However, with the ACH debit method, the same ACH transfer is (done inside the hacked bank login), 
+                    <b>So the money is pushed out. That's the only difference between ACH PULL</b> (ach done with banks) <b>and ACH PUSH</b> (ach done for prepaid cards)
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Part 2, Step 2</h4>
+                <img src="img/ach/18.png" alt=""/>
+                <p>
+                    This is the logins used, & I went to <b>ADD EXTERNAL BANK</b>, 
+                    and added the Account& Routing No before money was scheduled 
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Part 2, Step 3</h4>
+                <img src="img/ach/19.png" alt=""/>
+                <p>
+                    This is the email alert after money was scheduled. Reason I always prefer getting bank log with email attached
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Part 2, Step 4</h4>
+                <img src="img/ach/20.png" alt="" />
+                <p>
+                    See how the money has been deducted from the hacked bank login and writtern as <b>ACH DEBIT</b>
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Part 2, Step 5</h4>
+                <img src="img/ach/21.png" alt="" />
+                <p> 
+                    Once the money enters, you can withdraw with the physical card or buy crypto with the card.
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Part 2, Step 6</h4>
+                <img src="img/partners/good.png" class="tutorial-img">
+                <p> 
+                    Done !!! Now the above Bank Open up Method can be used to receive any loan you apply for, 
+                    again if you get error along the way means your ip expose you can also rdp for this open up
+
+                    Lastly with be above method make sure to use your client information. 
+                    make sure it matches with any loan move information you are apply for.
+
+                    Enjoy✅✅
+                </p>
+            </div>
+        </div>
+
+    </div>
+
+</section>
+
+
+
+
+
+
+
+
 
 
 
