--- a/public/download.html
+++ b/public/download.html
@@ -1474,7 +1474,7 @@
 
 <!-- start contact info section -->
 <section id="cd-time" class="parallax cd-container achtransfer" data-background="img/content/bg.jpg" 
-data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
+data-scroll-index="5" style="padding: 0; margin: 0;">
     <div class="opacity-full-dark bg-extra-dark-gray"></div>
 
     <div class="section-heading">
