--- a/public/download.html
+++ b/public/download.html
@@ -276,12 +276,12 @@
             <h4 id="titlelogs3"></h4>
         </div>
 
-        <div class="row xenon4 lg-display-none" style="margin: 0 -10px !important;">
+        <div class="row xenon4" style="margin: 0 -10px !important;">
             <div class="col-lg-4 col-6 center-col" id="flex-one">
                 <div class="col-lg-9 col-12 center-col modal-body no-bord">
                     <canvas id="chart3"></canvas>
                 </div> 
-                <div class="col-lg-10 col-12 center-col modal-body no-bord lg-display-none">
+                <div class="col-lg-10 col-12 center-col modal-body no-bord">
                     <canvas id="chart4"></canvas>
                 </div> 
             </div>  
@@ -1424,12 +1424,6 @@
                             </div>
                         </div>    
 
-                        <div id="invoice-footer">
-                            <button class="butn" id="tiket"  data-bs-toggle="modal" data-bs-target="#uploadModal">
-                                Create Ticket <img src="img/partners/cloud.png">
-                            </button>
-                        </div>
-
                     </div>
                 </div>
             </div>
@@ -1476,6 +1470,12 @@
 
     <div class="section-heading" style="margin: 3vh auto -1vh !important">
         <h4></h4>
+    </div>
+
+    <div class="vpn-section">
+        <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#uploadModal">
+            Tickets ID <img src="img/partners/cloud.png">
+        </a>
     </div>
 
     <div class="owl-carousel owl-theme clients"  id="clients">
