--- a/public/chime.html
+++ b/public/chime.html
@@ -673,7 +673,7 @@
                 <img src="img/chime/5.jpg" alt="" />
                 <p>
                     Right after selecting the No Card option, you will be redirected to a new page.
-                    Then select your bank, I always prefer you select Huntington bank or chime bank for cashapp
+                    Then select your bank, (Chime)
                 </p>
             </div>
         </div>
