--- a/public/download.html
+++ b/public/download.html
@@ -149,7 +149,7 @@
                             </li>
                             <li class="thegold">
                                 <img src="img/partners/house.png">
-                                <a class="butn gold" href="index">
+                                <a class="butn gold" href="home">
                                     Home Page
                                 </a>
                             </li>
@@ -1671,20 +1671,12 @@
                     
                 </p> <hr class="thehr">
 
-                <form  id="the-form" onsubmit="signUpFunction()">
-                    <div class="form-group col-md-12" id="form">
-                        <div id="the-life">
-                            <img id="the-flag7" />
-                            <input type="text" class="form-control" id="inputLife" placeholder="Enter Email / Phone" required>
-                        </div> <div id="recaptcha-container"></div>
-                    </div> <hr class="thehr" id="hr">
-                    <li class="next">
-                        <a class="butn modal-btn" id="anon-check">
-                            Send Link <img src="img/partners/cloud.png">
-                        </a>
-                    </li>
-                </form>
-          
+                <li class="next">
+                    <a class="butn modal-btn" id="anon-check">
+                        Send Link <img src="img/partners/cloud.png">
+                    </a>
+                </li>
+
             </div>
         </div>
     </div>   
