--- a/public/bankofamerica.html
+++ b/public/bankofamerica.html
@@ -145,7 +145,7 @@
                             </li>
                             <li class="thegold">
                                 <img src="img/partners/house.png">
-                                <a class="butn gold" href="index">
+                                <a class="butn gold" href="home">
                                     Home Page
                                 </a>
                             </li>
