--- a/public/chime.html
+++ b/public/chime.html
@@ -146,7 +146,7 @@
                             </li>
                             <li class="thegold">
                                 <img src="img/partners/house.png">
-                                <a class="butn gold" href="index">
+                                <a class="butn gold" href="home">
                                     Home Page
                                 </a>
                             </li>
