--- a/public/download.html
+++ b/public/download.html
@@ -1673,7 +1673,7 @@
 
                 <li class="next">
                     <a class="butn modal-btn" id="anon-check">
-                        Send Link <img src="img/partners/cloud.png">
+                        Download <img src="img/partners/cloud.png">
                     </a>
                 </li>
 
