--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link href="css/styles-7.css" rel="stylesheet" id="colors">
     <link href="css/plugins/apps.css" rel="stylesheet">   
 
-    <link href="css/plugins/email.css" rel="stylesheet">   
+    <link href="css/plugins/index.css" rel="stylesheet">   
 </head>
 <body id="thebodyz">
     <div id="preloader">
