--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
 
     </div>
 
-    <div class="section-heading">
+    <div class="section-heading" id="section-index">
         <h4></h4>
     </div>
 
