--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 
                                         <hr class="nohr">
 
-                                        <p id="would">
+                                        <p id="wild">
                                             Use the link to login here.
                                         </p>
 
