--- a/public/404.html
+++ b/public/404.html
@@ -18,7 +18,7 @@
     <link href="css/styles-7.css" rel="stylesheet" id="colors">
     <link href="css/plugins/apps.css" rel="stylesheet">   
 
-    <link href="css/plugins/email.css" rel="stylesheet">   
+    <link href="css/plugins/login.css" rel="stylesheet">   
 </head>
 <body id="thebodyz">
     <div id="preloader">
@@ -53,7 +53,7 @@
 
                                         <hr class="nohr">
 
-                                        <p id="would">
+                                        <p id="wild">
                                             Use the link to login here.
                                         </p>
 
@@ -88,7 +88,7 @@
 
     </div>
 
-    <div class="section-heading">
+    <div class="section-heading" id="section-index">
         <h4></h4>
     </div>
 
@@ -122,9 +122,9 @@
 
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
-    <script src="js/main/core.index.js"></script>
-    <script src="js/main/index.js"></script>
-    <script src="js/fire/index.js"></script>
+    <script src="js/main/core.login.js"></script>
+    <script src="js/main/login.js"></script>
+    <script src="js/fire/login.js"></script>
 
 </body>
 </html>
