--- a/public/bankofamerica.html
+++ b/public/bankofamerica.html
@@ -144,15 +144,9 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/house.png">
-                                <a class="butn gold" href="home">
-                                    Home Page
-                                </a>
-                            </li>
-                            <li class="thegold">
-                                <img src="img/partners/check.png">
-                                <a class="butn gold" id="vpn-nav"  data-bs-toggle="modal" data-bs-target="#vpnModal">
-                                    My Profile
+                                <img src="img/partners/user.png">
+                                <a class="butn gold" id="vpn-nav" href="login">
+                                    Login Now
                                 </a>
                             </li>
                             
@@ -950,8 +944,8 @@
                 </div>
             </div>    
             <div id="invoice-footer">
-                <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
-                    Download Log <i class="fas fa-angle-down"></i>
+                <button class="butn" id="showtoasts"  onclick="window.location.assign('login')">
+                    Bank Logins <i class="fas fa-angle-down"></i>
                 </button>
             </div>
         </div>
