--- a/public/pnc.html
+++ b/public/pnc.html
@@ -144,15 +144,9 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/house.png">
-                                <a class="butn gold" href="home">
-                                    Home Page
-                                </a>
-                            </li>
-                            <li class="thegold">
-                                <img src="img/partners/check.png">
-                                <a class="butn gold" id="vpn-nav"  data-bs-toggle="modal" data-bs-target="#vpnModal">
-                                    My Profile
+                                <img src="img/partners/user.png">
+                                <a class="butn gold" id="vpn-nav" href="login">
+                                    Login Now
                                 </a>
                             </li>
                             
