--- a/public/bankofamerica.html
+++ b/public/bankofamerica.html
@@ -34,7 +34,7 @@
         <header class="header-style2">
             <div class="navbar-default">
             <nav class="navbar">
-            <a class="navbar-header"  data-bs-toggle="modal" data-bs-target="#vpnModal">
+            <a class="navbar-header"  data-bs-toggle="modal" data-bs-target="#profileModal">
                 <img id="logo" src="img/partners/banklogo.png">
                 <div class="jina-div">
                     <input readonly id="jinaHolder" maxlength="17" value="Bank America">
@@ -944,7 +944,7 @@
                 </div>
             </div>    
             <div id="invoice-footer">
-                <button class="butn" id="showtoasts"  onclick="window.location.assign('login')">
+                <button class="butn" id="showtoasts" onclick="window.location.assign('login')">
                     Bank Logins <i class="fas fa-angle-down"></i>
                 </button>
             </div>
