--- a/public/citi.html
+++ b/public/citi.html
@@ -34,7 +34,7 @@
         <header class="header-style2">
             <div class="navbar-default">
             <nav class="navbar">
-            <a class="navbar-header"  data-bs-toggle="modal" data-bs-target="#vpnModal">
+            <a class="navbar-header"  data-bs-toggle="modal" data-bs-target="#profileModal">
                 <img id="logo" src="img/partners/citi.png" class="logo-50">
                 <div class="jina-div">
                     <input readonly id="jinaHolder" maxlength="17" value="Citi Bank">
@@ -909,8 +909,8 @@
                 </div>
             </div>    
             <div id="invoice-footer">
-                <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
-                    Download Log <i class="fas fa-angle-down"></i>
+                <button class="butn" id="showtoasts" onclick="window.location.assign('login')">
+                    Bank Logins <i class="fas fa-angle-down"></i>
                 </button>
             </div>
         </div>
