--- a/public/download.html
+++ b/public/download.html
@@ -251,7 +251,7 @@
 
                     <div id="invoice-footer">
                         <button class="butn" id="showtoasts"  data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            Download Log <i class="fas fa-angle-down"></i>
+                            Download IT <i class="fas fa-angle-down"></i>
                         </button>
                     </div>
                     
