--- a/public/download.html
+++ b/public/download.html
@@ -1655,7 +1655,7 @@
             <div class="modal-body">
                 <p class="modal-p" id="anon-p">
                     
-                </p> 
+                </p> <hr class="thehr">
 
                 <p class="modal-p owl-carousel owl-theme" id="usage-p">
                 
