--- a/public/chime.html
+++ b/public/chime.html
@@ -21,6 +21,11 @@
     <link href="css/styles.css" rel="stylesheet" id="colors">
     <link href="css/plugins/apps.css" rel="stylesheet">
     <link rel="stylesheet" href="css/light.css" />
+    <style>
+        .borderp {
+            border-radius: 50% !important;
+        }
+    </style>
 </head>
 <body id="thebodyz">
     <div id="preloader">
