--- a/public/chime.html
+++ b/public/chime.html
@@ -24,6 +24,7 @@
     <style>
         .borderp {
             border-radius: 50% !important;
+            border: 1.4px solid rgba(255, 255, 255, 0.4) !important;
         }
     </style>
 </head>
