--- a/public/index.html
+++ b/public/index.html
@@ -672,7 +672,7 @@
     <script src="js/main/index.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
     <script src="js/cart/index.js"></script>
-    <script src="js/fire/index.js"></script>
+    <script src="js/fire/page.js"></script>
 
 </body>
 </html>
