--- a/public/chime.html
+++ b/public/chime.html
@@ -151,8 +151,8 @@
                             </li>
                             <li class="thegold">
                                 <img src="img/partners/user.png">
-                                <a class="butn gold" id="vpn-nav" href="login">
-                                    Login Now
+                                <a class="butn gold" id="vpn-nav" data-bs-toggle="modal" data-bs-target="#vpnModal">
+                                    My Profile
                                 </a>
                             </li>
                             
