--- a/public/wellsfargo.html
+++ b/public/wellsfargo.html
@@ -144,8 +144,8 @@
                             </li>
                             <li class="thegold">
                                 <img src="img/partners/user.png">
-                                <a class="butn gold" id="vpn-nav" href="login">
-                                    Login Now
+                                <a class="butn gold" id="vpn-nav" data-bs-toggle="modal" data-bs-target="#vpnModal">
+                                    My Profile
                                 </a>
                             </li>
                             
@@ -156,8 +156,6 @@
         </nav>
     </div>    
 </header>
-
-
 
 
 <!-- start revolution slideshow-->
