--- a/public/woodforest.html
+++ b/public/woodforest.html
@@ -143,8 +143,8 @@
                             </li>
                             <li class="thegold">
                                 <img src="img/partners/user.png">
-                                <a class="butn gold" id="vpn-nav" href="login">
-                                    Login Now
+                                <a class="butn gold" id="vpn-nav" data-bs-toggle="modal" data-bs-target="#vpnModal">
+                                    My Profile
                                 </a>
                             </li>
                             
@@ -155,7 +155,6 @@
         </nav>
     </div>    
 </header>
-
 
 <!-- start revolution slideshow-->
 <div class="rev_slider_wrapper" data-scroll-nav="5">
