--- a/public/wellsfargo.html
+++ b/public/wellsfargo.html
@@ -760,7 +760,7 @@
     </div>
 </div>
 
-    <script src="js/cart/won.js"></script>
+    <script src="js/cart/banks.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
@@ -768,7 +768,7 @@
     <script src="js/main/main.js"></script>
     <script src="js/auth/auth.js"></script>
     <script src="datatables/js/jquery.datatable2.min.js"></script>
-    <script src="js/cart/add.js"></script>
+    <script src="js/cart/cart.js"></script>
     <script src="js/rev_slider/jquery.themepunch.revolution.min.js"></script>
 </body>
 </html>
